2026-02-06T13:12:16Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21751782094 # 1426
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
* notice: last 14d: unq all: 49 286
* notice: prev accum: outdated-unq outdated-all / unq all: 5258 10355 / 5309 10640
* notice: next accum: outdated-unq outdated-all / unq all: 5260 10357 / 5312 10643
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -0 -0 / +3 +3 -0 -0 / 3 3
* notice: removed / changed dates: [2026-01-22] / [2026-02-05]

2026-02-06T02:35:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21736572640 # 1425
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-06
* notice: last 14d: unq all: 48 285
* notice: prev accum: outdated-unq outdated-all / unq all: 5256 10353 / 5297 10594
* notice: next accum: outdated-unq outdated-all / unq all: 5258 10355 / 5309 10640
* notice: prev exec diff / last date diff / accum: unq all: +12 +46 -0 -0 / +12 +46 -0 -0 / 12 46
* notice: removed / changed dates: [2026-01-21] / [2026-02-04]

2026-02-05T13:14:56Z:

2026-02-04T13:12:51Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21672799526 # 1422
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-04
* notice: last 14d: unq all: 41 241
* notice: prev accum: outdated-unq outdated-all / unq all: 5254 10351 / 5296 10593
* notice: next accum: outdated-unq outdated-all / unq all: 5256 10353 / 5297 10594
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2026-01-20] / [2026-02-03]

2026-02-03T13:13:47Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21631623314 # 1420