@@ -1,12 +1,7 @@
 {
-  "count": 286,
-  "uniques": 49,
+  "count": 359,
+  "uniques": 58,
   "clones": [
-    {
-      "timestamp": "2026-01-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2026-01-24T00:00:00Z",
       "count": 0,
@@ -71,6 +66,11 @@
       "timestamp": "2026-02-05T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2026-02-06T00:00:00Z",
+      "count": 74,
+      "uniques": 13
     }
   ]
 }
